# msd

./: .cnb.yml  .env  .gitignore  .nwa-config.yaml  AGENTS.md  Architecture.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.cn.md  README.md
.agent/rules/: code-style.md  python.md  rust.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml  pyrefly.toml
bindings/python/msd/: __init__.py  const.py  dataframe_adaptor.py  easy.py  json_table.py  msd_query.py  pack.py  query.py  reader.py  update.py
bindings/python/pymsd/: __init__.py  _msd.pyi  const.py  dataframe_adaptor.py  easy.py  json_table.py  query.py  update.py
bindings/python/src/: lib.rs  py_table.rs
bindings/python/tests/: dev.py  pack.py  test_dataframe_adaptor_concat.py  test_easy.py  test_json_table.py  test_pack.py  test_query.py  test_query_async.py
bindings/typescript/: README.md  d64.ts  package.json  tsconfig.json
bindings/typescript/src/: binary.ts  d64.ts  index.ts  query.ts  table.ts
bindings/typescript/tests/: query.test.ts  table.test.ts
docs/en/: book.toml
docs/en/src/: 000_introduction.md  001_key_concepts.md  100_quick_start.md  101_installation.md  102_server.md  103_client.md  104_sql_interface.md  200_common_cases.md  201_data_import.md  202_data_export.md  203_integrate_with_an_exchange_data_feed.md  204_subscribe_data_change.md  300_bindings.md  301_rust.md  302_python.md  303_typescript.md  400_benchmark.md  500_developer.md  501_design.md  502_module.md  503_guide.md  504_dataflow.md  505_api.md  SUMMARY.md
msd/: Cargo.toml
msd-db/: AGENTS.md  Cargo.toml
msd-db-viewer/: Cargo.toml
msd-db-viewer/src/: main.rs
msd-db/doc/: design.md
msd-db/src/: db.rs  errors.rs  index.rs  keys.rs  lib.rs  request.rs  serde.rs
msd-db/src/db/: flusher.rs  mod.rs
msd-db/src/request/: base.rs  broadcast.rs  insert.rs  mod.rs  query.rs
msd-db/src/worker/: agg_state.rs  cache.rs  chan.rs  delete.rs  init.rs  insert.rs  mod.rs  query.rs
msd-db/tests/: test_db.rs  test_table_serde.rs
msd-request/: Cargo.toml
msd-request/src/: agg.rs  base.rs  broadcast.rs  delete.rs  errors.rs  insert.rs  keys.rs  lib.rs  list_objects.rs  query.rs  table_frame.rs
msd-request/src/sql/: mod.rs  msd_dialect.rs  tests.rs
msd-store/: Cargo.toml
msd-store/src/: errors.rs  lib.rs  table.rs
msd-store/src/store_rocksdb/: mod.rs
msd-table/: Cargo.toml
msd-table/src/: d64.rs  date.rs  errors.rs  lib.rs  macros.rs
msd-table/src/serde/: csv.rs  mod.rs
msd-table/src/table/: datatype.rs  field.rs  macros.rs  mod.rs  rows_table.rs  series.rs  table.rs  table_ref.rs  variant.rs
msd-table/src/updater/: mod.rs  stateless.rs
msd-table/src/updater/stateful/: first.rs  mod.rs  period.rs  previous.rs
msd-table/src/variant/: cast.rs  mod.rs  ops.rs
msd-table/tests/: csv_test.rs  series_test.rs  table_test.rs
msd/src/: app_config.rs  logging.rs  main.rs  token.rs
msd/src/server/: handlers.rs  mod.rs
msd/src/server/handlers/: data.rs  import.rs  mcp.rs  mcp_python_guide.md  mcp_sql_guide.md  mod.rs  permission.rs  query.rs  table.rs
msd/src/server/handlers/ws/: broker.rs  filter.rs  message.rs  mod.rs
msd/src/shell/: dump.rs  import.rs  mod.rs  query.rs  table_handler.rs
msd/tests/: rocksdb_store_test.rs
tests/data/: create_table.sql  create_table_large.sql  kline.sqlite.sql  stock_dividend.csv  stock_financial_basic.csv  stock_shares.csv
tests/scripts/: demo_kline.py  subscriber.ts  wheels.py
tests/sql/: chan.sql  create_table.sql  full.sql
