

[workspace]
resolver = "3"
members = ["msd", "msd-store", "msd-table"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = [
  "serde-well-known",
  "macros",
  "local-offset",
] }
tracing = { version = "0.1" }
