

[workspace]
resolver = "3"
members = ["msd", "msd-store", "msd-table", "msd-db"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Jia <lijia.c@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
time = { version = "0.3", features = [
  "serde-well-known",
  "macros",
  "local-offset",
] }
tracing = { version = "0.1" }
