

[workspace]
resolver = "3"
members = [
  "msd",
  "msd-store",
  "msd-table",
  "msd-db",
  "msd-db-viewer",
  "msd-request",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Jia <lijia.c@gmail.com>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
bincode = { version = "2", features = ["serde"] }
time = { version = "0.3", features = [
  "serde-well-known",
  "macros",
  "local-offset",
] }
tracing = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }
dotenvy = "0.15"
futures = "0.3"
csv = "1.4"
rustc-hash = "2.1.1"
