[package]
name = "msd-db"
description = "the msd db layer "
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
msd-store = { path = "../msd-store", features = ["rocksdb"] }
msd-table = { path = "../msd-table" }
tokio = { version = "1.0", features = ["full"] }
bincode.workspace = true
rustc-hash = "2.1.1"


[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
