[package]
name = "msd-db"
description = "the msd db layer "
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
msd-store = { path = "../msd-store", features = ["rocksdb"] }
msd-table = { path = "../msd-table" }
msd-request = { path = "../msd-request" }
tokio.workspace = true
bincode.workspace = true
rustc-hash.workspace = true
futures.workspace = true
wildcard = { version = "0.3" }


[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
