[package]
name = "msd-store"
description = "the low level key-value store"
version.workspace = true
edition.workspace = true
authors.workspace = true


[features]
rocksdb = ["dep:rocksdb"]

[dependencies]
rocksdb = { version = "0.24", optional = true, features = [
  "multi-threaded-cf",
] }
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
