[package]
name = "msd-store"
description = "the low level key-value store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[features]
rocksdb = ["dep:rocksdb"]

[dependencies]
rocksdb = { version = "0.24", optional = true, default-features = false, features = [
  "multi-threaded-cf",
  "zstd",
  "lz4",
  "bindgen-runtime",
  "jemalloc",
] }
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
