[package]
name = "msd-table"
description = "the table  based on apache arrow"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
arrow = { version = "55" }
bincode = { version = "2.0", features = ["serde"] }
rust_decimal = "1.37.2"
