[package]
name = "msd-table"
description = "the table  based on apache arrow"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
rust_decimal = "1.37.2"
csv.workspace = true
anyhow.workspace = true
bincode.workspace = true
