[package]
name = "msd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8" }
axum-streams = { version = "0.24", features = ["json"] }
csv.workspace = true
msd-store = { path = "../msd-store", features = ["rocksdb"] }
msd-db = { path = "../msd-db" }
msd-request = { path = "../msd-request" }
msd-table = { path = "../msd-table" }
serde.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing-appender = { version = "0.2" }
tracing.workspace = true
tokio.workspace = true
clap.workspace = true
dotenvy.workspace = true
time.workspace = true
tokio-stream = "0.1"
http-body-util = "0.1"
futures.workspace = true
rustc-hash.workspace = true
memchr="2"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd"] }
serde_json.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
tower-http = {version="0.6", features=["compression-full", "cors", "decompression-full"]}
rustyline = {version="17", features=["derive"]}
http-body = "1"

