[package]
name = "pymsd"
version.workspace = true
edition.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_msd"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.27", features = ["abi3", "extension-module"]}
numpy = "0.27"
msd-request = { path = "../../msd-request" }
msd-table = { path = "../../msd-table" }