[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "msd"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4"
]

[dependency-groups]
dev = [
    "aiohttp>=3.10.11",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "requests>=2.32.4",
]

