[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "pymsd"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
]
readme = "README.md"
description = "Python binding for msd"



[project.urls]
repository = "https://github.com/msd-rs/msd-app/tree/main/bindings/python"


[dependency-groups]
dev = [
    "aiohttp>=3.10.11",
    "pandas>=3.0.0",
    "polars>=1.8.2",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "requests>=2.32.4",
]

[tool.maturin]
module-name = "pymsd._msd"


[tool.pytest.ini_options]
pythonpath = [ "." ]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "INFO"
log_cli = true
addopts = "--benchmark-skip"